# docs/swagger.json
@@ -8,6 +8,72 @@
     },
     "host": "localhost:5000",
     "paths": {
+        "/api/v1/importServerFromExcel": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create Server by Excel",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Server Private"
+                ],
+                "summary": "Create Server by Excel",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/login": {
+            "post": {
+                "description": "Create a new access token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "create a new access token",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "400",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/search": {
             "get": {
                 "description": "Search server by name.",
@@ -30,8 +96,14 @@
                     },
                     {
                         "type": "string",
-                        "description": " name to search",
+                        "description": "name to search",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "value to search",
+                        "name": "value",
                         "in": "query",
                         "required": true
                     }
@@ -85,6 +157,14 @@
                         "name": "ipv4",
                         "in": "body",
                         "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "status Server",
+                        "name": "status",
+                        "in": "body",
                         "schema": {
                             "type": "string"
                         }
@@ -178,6 +258,15 @@
                     {
                         "description": "name Server ",
                         "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "status Server",
+                        "name": "status",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -297,35 +386,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Server"
-                        }
-                    },
-                    "400": {
-                        "description": "400",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/login": {
-            "post": {
-                "description": "Create a new access token.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Token"
-                ],
-                "summary": "create a new access token",
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
                         }
                     },
                     "400": {
